# ablemon

./: .gitignore  .mcp.json  ABLE.md  AGENTS.md  ATLAS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_HANDOFF.md  CODEX_PROMPT.md  CODE_HANDOFF.md  NEXT_RUN_PROMPT.md  README.md  SOUL.md  atlas_gateway.py  deploy-to-server.sh  docker-compose.yml  install.sh  pyproject.toml  test_context.py  test_empty.py  test_empty_response.py  test_extraction.py  test_loop_logic.py  test_models.py  test_openrouter.py  test_params.py  test_provider.py  test_raw.py  test_tools.py  test_user_prompt.py
.claude/: settings.json
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
able/: .env.example  .gitignore  Dockerfile  __init__.py  __main__.py  able.service  deploy.sh  docker-compose.yml  requirements-core.txt  requirements-full.txt  requirements-observability.txt  requirements.txt  start.py
able-studio/: .env.example  AGENTS.md  middleware.ts  package.json  pnpm-lock.yaml  tsconfig.json
atlas/: .env.example  Dockerfile  atlas.service  requirements.txt  start.py
atlas-studio/: .env.example  .gitignore  AGENTS.md  drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml
atlas-v2/: .env.example  .gitignore  Dockerfile  deploy.sh  docker-compose.yml  requirements.txt  start.py
atlas_system/: AGENTS.md  CUSTOMIZATION.md  IDENTITY.md  SECURITY.md  SOUL.md  TOOLS.md  atlas-setup.sh
clients/: __init__.py
config/: compression_rules.yaml  feature_flags.yaml  goals.json  routing_config.yaml  scorer_weights.yaml  split_tests.yaml  tool_permissions.yaml  trusted_peers.yaml
(+975 files in other folders)
