[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "able-agent"
version = "0.1.0"
description = "ABLE - Autonomous Business & Learning Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
observability = [
    "arize-phoenix>=8.0.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
]

[project.scripts]
able = "able.__main__:main"
able-chat = "able.cli.chat:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["able*"]
